--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -28,44 +28,65 @@
     <assets>
       <icon>icon.png</icon>
     </assets>
+    <summary lang="ca_ES">Biblioteca de música universal dinàmica (Dynamic Universal Music Bibliotheque)</summary>
     <summary lang="da_DK">Dynamic Universal Music Bibliotheque (dynamisk universel musikbibliotek)</summary>
     <summary lang="de_DE">Dynamische universelle Musikbibliothek</summary>
     <summary lang="en_GB">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="es_ES">Biblioteca Dinámica Universal de Música</summary>
     <summary lang="es_MX">Biblioteca de Música Universal Dinámica (Dynamic Music Universal Bibliotheque, N. del T.)</summary>
+    <summary lang="eu_ES">Dynamic Universal Music Bibliotheque (Musika dinamikoko liburutegi unibertsala)</summary>
+    <summary lang="fr_FR">Bibliothèque Dynamic Universal Music</summary>
+    <summary lang="hr_HR">Dinamička univerzalna glazbena biblioteka</summary>
     <summary lang="id_ID">Bibliotheque Musik Universal Dinamis</summary>
+    <summary lang="it_IT">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="ko_KR">Dynamic Universal Music Bibliotheque</summary>
+    <summary lang="nl_NL">Dynamisch Universele Muziekbibliotheek</summary>
     <summary lang="pl_PL">Dynamic Universal Music Bibliotheque (DUMB)</summary>
     <summary lang="ru_RU">DUMB – Dynamic Universal Music Bibliotheque</summary>
     <summary lang="zh_CN">动态通用音乐库（Dynamic Universal Music Bibliotheque）</summary>
+    <description lang="ca_ES">DUMB és una biblioteca renderitzadora de mòduls d&apos;àudio. Llegeix fitxers de mòduls i emet àudio que es pot bolcar a la biblioteca de reproducció d&apos;àudio real.[CR][CR]A Kodi admet la reproducció dels formats de mòduls següents:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="da_DK">DUMB er et bibliotek med lydgengivere. Den læser modulfiler og udsender lyd, der kan dumpes til det faktiske lydafspilningsbibliotek.[CR][CR]Kodi understøtter afspilning af følgende modulformater:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="de_DE">DUMB ist eine Modul-Audio-Renderer-Bibliothek. Es liest Moduldateien und gibt zugehörigen Audiostream aus, das in die eigentliche Audiowiedergabebibliothek kopiert werden kann.[CR][CR]An Kodi wird die Wiedergabe der folgenden Modulformate unterstützt:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="en_GB">DUMB is a module audio renderer library. It reads module files and outputs audio that can be dumped to the actual audio playback library.[CR][CR]On Kodi Supports playback of the following module formats:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="es_ES">DUMB es una libreria de procesamiento de módulos de audio. Lee archivos módulo y saca el audio que puede enviarse a la libreria de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="es_MX">DUMB es una librería de procesamiento de módulos de audio. Lee los archivos de módulo y extrae el audio que puede enviarse a la librería de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="eu_ES">DUMB (Musika dinamikoko liburutegi unibertsala) audio-bihurtzaileen liburutegi bat da. Fitxategi-moduluak irakurri, atera eta oraingo audio-erreproduzitzailearen liburutegira bidaltzen du.[CR][CR]Kodi hurrengo formatu-moduluekin bateragarria da:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="fr_FR">DUMB est une bibliothèque de modules de rendu audio. Il lit les fichiers de module et produit de l&apos;audio qui peut être vidé vers la bibliothèque de lecture audio réelle.[CR][CR]Sur Kodi, il prend en charge la lecture des formats de module suivants :[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="hr_HR">DUMB je modul biblioteke zvučnog prikaza. Čita datoteke modula i stvara izlaz zvuka koji se može ispisati u zvučnu datoteku reprodukcije.[CR][CR]Na Kodiju podržava reprodukciju sljedećih formata modula:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="id_ID">DUMB adalah pustaka penyaji audio modul. Itu membaca file modul dan mengeluarkan audio yang dapat dibuang ke perpustakaan pemutaran audio yang sebenarnya.[CR][CR]On Kodi Mendukung pemutaran format modul berikut:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Pelacak Jeritan 3)</description>
+    <description lang="it_IT">DUMB è una libreria di renderer audio di moduli. Legge i file del modulo ed emette l&apos;audio che può essere scaricato nella libreria di riproduzione audio effettiva.[CR][CR]Su Kodi supporta la riproduzione dei seguenti formati di modulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="ko_KR">DUMB는 모듈 오디오 렌더러 라이브러리입니다. 모듈 파일을 읽고 실제 오디오 재생 라이브러리에 덤프할 수 있는 오디오를 출력합니다.[CR][CR]Kodi에서 다음 모듈 형식의 재생을 지원합니다.[CR]- IT(Impulse Tracker)[CR]- XM(Fasttracker II)[CR]- S3M(Stream Tracker 3)</description>
     <description lang="pl_PL">DUMB to modułowa biblioteka renderująca dźwięk. Czyta pliki modułów i wysyła dźwięk, który można zrzucić do rzeczywistej biblioteki odtwarzania dźwięku.[CR][CR]W Kodi obsługuje odtwarzanie następujących formatów modułów:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="ru_RU">DUMB - это библиотека рендеринга звука модуля. Она читает файлы модулей и выводит аудио, которое может быть передано в библиотеку воспроизведения аудио.[CR][CR]Kodi поддерживает воспроизведение следующих форматов модулей:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="sk_SK">DUMB je knižnica modulov pre renderovanie zvuku. Číta súbory modulov a výstup zvuku, ktorý možno uložiť do aktuálnej knižnice prehrávania zvuku.[CR][CR]Na Kodi Podporuje prehrávanie nasledujúcich formátov modulov:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="zh_CN">DUMB 是一个模块音频渲染器库。它读取模块文件并输出可转储到实际音频播放库的音频。[CR][CR]在 Kodi 下支持以下模块格式的播放：[CR]- IT（Impulse Tracker）[CR]- XM（Fasttracker II）[CR]- S3M（Scream Tracker 3）</description>
+    <disclaimer lang="ca_ES">Es recomana utilitzar el complement &quot;OpenMPT Audio Decoder&quot; en lloc d&apos;aquest.</disclaimer>
     <disclaimer lang="da_DK">Det anbefales at bruge &quot;OpenMPT Audio Decoder&quot; i stedet for denne.</disclaimer>
     <disclaimer lang="de_DE">Es wird empfohlen, anstelle dieses Addons &quot;OpenMPT Audio Decoder&quot; zu verwenden.</disclaimer>
     <disclaimer lang="en_GB">It is recommended to use &quot;OpenMPT Audio Decoder&quot; addon instead of this one.</disclaimer>
     <disclaimer lang="es_ES">Se recomienda usar el addon &quot;Decodificador de Audio OpenMPT&quot; en lugar de este.</disclaimer>
     <disclaimer lang="es_MX">Se recomienda utilizar el complemento &quot;Decodificador de audio OpenMPT&quot; en lugar de este.</disclaimer>
+    <disclaimer lang="eu_ES">Honen ordez, &quot;OpenMPT Audio deskodetzailea&quot; gehigarria erabiltzea gomendatzen da.</disclaimer>
+    <disclaimer lang="fr_FR">Il est recommandé d&apos;utiliser l&apos;addon &quot;OpenMPT Audio Decoder&quot; au lieu de celui-ci.</disclaimer>
+    <disclaimer lang="hr_HR">Preporučljivo je korištenje &quot;OpenMPT zvučni dekôder&quot; dodatka umjesto ovog.</disclaimer>
     <disclaimer lang="id_ID">Disarankan untuk menggunakan addon &quot;OpenMPT Audio Decoder&quot; daripada yang ini.</disclaimer>
+    <disclaimer lang="it_IT">Si consiglia di utilizzare il componente aggiuntivo &quot;OpenMPT Audio Decoder&quot; invece di questo.</disclaimer>
     <disclaimer lang="ko_KR">이 애드온 대신 &quot;OpenMPT 오디오 디코더&quot; 애드온을 사용하는 것이 좋습니다.</disclaimer>
     <disclaimer lang="pl_PL">Zaleca się użycie dodatku &quot;Dekoder dźwięku OpenMPT&quot; zamiast tego.</disclaimer>
     <disclaimer lang="ru_RU">Вместо него рекомендуется использовать дополнение &quot;OpenMPT Audio Decoder&quot;.</disclaimer>
     <disclaimer lang="sk_SK">Namiesto tohto sa odporúča použiť doplnok &quot;OpenMPT Audio Decoder&quot;.</disclaimer>
     <disclaimer lang="zh_CN">建议使用“OpenMPT 音频解码器”插件代替此插件。</disclaimer>
+    <lifecyclestate type="deprecated" lang="ca_ES">Substituït pel complement audiodecoder.openmpt! Tanmateix, encara es pot utilitzar aquí.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="da_DK">Erstattet af audiodecoder.openmpt addon! Dette addon er dog stadig brugbart.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="de_DE">Ersetzt durch das Addon audiodecoder.openmpt! Aber hier auch noch verwendbar.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="en_GB">Replaced by audiodecoder.openmpt addon! However, but still usable here.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="es_ES">¡Reemplazado por el addon audiodecoder.openmpt! De todos modos, puede seguir usándose.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="es_MX">¡Reemplazado por el complemento audiodecoder.openmpt! Sin embargo, aún puedes utilizarlo.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="eu_ES">audiodecoder.openmpt gehigarriarengatik ordezkatua! Hala ere, oraindik erabil daiteke.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="fr_FR">Remplacé cependant par l&apos;addon audiodecoder.openmpt ! Mais toujours utilisable ici.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="hr_HR">Zamijenjeno je s audiodecoder.openmpt dodatkom! Ipak, je još ovdje iskoristiv.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="id_ID">Digantikan oleh audiodecoder.openmpt addon! Namun, tapi masih bisa digunakan di sini.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="it_IT">Sostituito dal componente aggiuntivo audiodecoder.openmpt! Comunque è ancora utilizzabile.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="ko_KR">audiodecoder.openmpt 애드온으로 대체되었습니다! 하지만 아직 여기에서도 사용할 수 있습니다.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="pl_PL">Zastąpiony przez dodatek audiodecoder.openmpt! Jednak nadal jest tutaj użyteczny.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="ru_RU">Заменен дополнением audiodecoder.openmpt! Но его ещё можно использовать здесь.</lifecyclestate>
